--- a/SR1PlayaCustomizer.csproj
+++ b/SR1PlayaCustomizer.csproj
@@ -66,19 +66,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FormVariant.cs">
+    <Compile Include="Source\CustomizableEntries.cs" />
+    <Compile Include="Source\FormVariant.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormVariant.Designer.cs">
+    <Compile Include="Source\FormVariant.Designer.cs">
       <DependentUpon>FormVariant.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormMain.cs">
+    <Compile Include="Source\FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormMain.Designer.cs">
+    <Compile Include="Source\FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
+    <Compile Include="Source\Globals.cs" />
+    <Compile Include="Source\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceGameFiles.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -92,10 +94,10 @@
     <None Include="Resources\customization_items.xtbl" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="FormVariant.resx">
+    <EmbeddedResource Include="Source\FormVariant.resx">
       <DependentUpon>FormVariant.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormMain.resx">
+    <EmbeddedResource Include="Source\FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ResourceGameFiles.resx">
