--- a/SR1PlayaCustomizer.csproj
+++ b/SR1PlayaCustomizer.csproj
@@ -91,6 +91,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="Resources\customization_default_items.xtbl" />
     <None Include="Resources\customization_items.xtbl" />
   </ItemGroup>
   <ItemGroup>
@@ -114,6 +115,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\beta.ico" />
+    <None Include="Resources\save.ico" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
